--- a/ライブラリなしJS作成/ドロワー完成版/index.html
+++ b/ライブラリなしJS作成/ドロワー完成版/index.html
@@ -1,153 +1,107 @@
 <!DOCTYPE html>
 <html lang="ja">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Drawer Animation Demo</title>
+    <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+      integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com /ajax/libs/gsap/3.7.0/ScrollTrigger.min.js "></script>
+  </head>
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<title>drawer nav demo phase 1</title>
-	<link rel="stylesheet" href="../assets/common.css">
-	<link rel="stylesheet" href="./style.css">
-</head>
-
-<body class="js-scrollbarFix">
-
-	<header class="Header js-scrollbarFix">
-		<h1 class="Header-logo">Logo</h1>
-		<button type="button" class="Header-button js-openDrawer" aria-controls="drawer" aria-expanded="false">
-			<img src="../assets/open.svg" class="Header-button-image" alt="ナビゲーションを開く" width="24" height="18">
-		</button>
-	</header>
-	<div id="drawer" class="Drawer js-drawer" aria-expanded="false">
-		<div class="Drawer-backdrop js-backdrop"></div>
-		<nav class="Drawer-nav Nav js-scrollable">
-			<button type="button" class="Nav-button js-closeDrawer" aria-controls="drawer" aria-expanded="false">
-				<img src="../assets/close.svg" class="Nav-button-image" alt="ナビゲーションを閉じる" width="18" height="18">
-			</button>
-			<ul class="Nav-list">
-				<li class="Nav-item">
-					<a href="#" class="Nav-link">アイテム 1</a>
-				</li>
-				<li class="Nav-item">
-					<a href="#" class="Nav-link">アイテム 2</a>
-				</li>
-				<li class="Nav-item">
-					<a href="#" class="Nav-link">アイテム 3</a>
-				</li>
-				<li class="Nav-item">
-					<a href="#" class="Nav-link">アイテム 4</a>
-				</li>
-				<li class="Nav-item">
-					<a href="#" class="Nav-link">アイテム 5</a>
-				</li>
-				<li class="Nav-item">
-					<a href="#" class="Nav-link">アイテム 6</a>
-				</li>
-				<li class="Nav-item">
-					<a href="#" class="Nav-link">アイテム 7</a>
-				</li>
-				<li class="Nav-item">
-					<a href="#" class="Nav-link">アイテム 8</a>
-				</li>
-				<li class="Nav-item">
-					<a href="#" class="Nav-link">アイテム 9</a>
-				</li>
-				<li class="Nav-item">
-					<a href="#" class="Nav-link">アイテム 10</a>
-				</li>
-				<li class="Nav-item">
-					<a href="#" class="Nav-link">アイテム 11</a>
-				</li>
-				<li class="Nav-item">
-					<a href="#" class="Nav-link">アイテム 12</a>
-				</li>
-			</ul>
-		</nav>
-	</div>
-	<main class="Main">
-		<section class="Main-item Content">
-			<h2 class="Content-title">Section 1</h2>
-			<p class="Content-text">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-				magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-				pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-				laborum.
-			</p>
-			<ul class="Content-list LinkList">
-				<li class="LinkList-item">
-					<a href="#" class="LinkList-link">Lorem ipsum</a>
-				</li>
-				<li class="LinkList-item">
-					<a href="#" class="LinkList-link">dolor sit amet</a>
-				</li>
-				<li class="LinkList-item">
-					<a href="#" class="LinkList-link">consectetur adipiscing elit</a>
-				</li>
-				<li class="LinkList-item">
-					<a href="#" class="LinkList-link">sed do eiusmod tempor</a>
-				</li>
-				<li class="LinkList-item">
-					<a href="#" class="LinkList-link">incididunt ut labore</a>
-				</li>
-				<li class="LinkList-item">
-					<a href="#" class="LinkList-link">et dolore magna aliqua</a>
-				</li>
-				<li class="LinkList-item">
-					<a href="#" class="LinkList-link">Ut enim ad minim veniam</a>
-				</li>
-				<li class="LinkList-item">
-					<a href="#" class="LinkList-link">quis nostrud</a>
-				</li>
-				<li class="LinkList-item">
-					<a href="#" class="LinkList-link">exercitation ullamco</a>
-				</li>
-				<li class="LinkList-item">
-					<a href="#" class="LinkList-link">laboris nisi ut aliquip</a>
-				</li>
-			</ul>
-			<p class="Content-text">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-				magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-				pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-				laborum.
-			</p>
-		</section>
-		<section class="Main-item Content">
-			<h2 class="Content-title">Section 2</h2>
-			<form action="" class="Content-form Form">
-				<p class="Form-item">
-					<label for="name" class="Form-label">名前</label>
-					<input type="text" id="name" class="Form-inputText" placeholder="John Smith">
-				</p>
-				<p class="Form-item">
-					<label for="email" class="Form-label">メール</label>
-					<input type="email" id="email" class="Form-inputText" placeholder="email@example.com">
-				</p>
-				<p class="Form-item">
-					<label for="message" class="Form-label">メッセージ</label>
-					<textarea id="message" class="Form-textarea" placeholder="Hello."></textarea>
-				</p>
-				<p class="Form-item">
-					<button type="submit" class="Form-submit">Submit</button>
-				</p>
-			</form>
-		</section>
-		<section class="Main-item Content">
-			<h2 class="Content-title">Section 3</h2>
-			<p class="Content-text">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-				magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-				pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-				laborum.
-			</p>
-		</section>
-	</main>
-	<footer class="Footer">
-		<p class="Footer-text">Footer text.</p>
-	</footer>
-	<script src="script.js"></script>
-</body>
-
+  <body class="js-scrollbarFix">
+    <header class="header js-scrollbarFix">
+      <h1>Drawer Animation With GSAP</h1>
+      <button
+        type="button"
+        class="header-button js-openDrawer js-animateDrawer"
+        aria-controls="drawer"
+        aria-expanded="false"
+      >
+        <img
+          src="../assets/open.svg"
+          class="header-button-image"
+          alt="ナビゲーションを開く"
+          width="44"
+          height="38"
+        />
+      </button>
+    </header>
+    <div id="drawer" class="drawer js-drawer" aria-expanded="false">
+      <div class="drawer-backdrop js-backdrop"></div>
+      <nav class="drawer-nav nav js-scrollable">
+        <button
+          type="button"
+          class="nav-button js-closeDrawer js-animateDrawer"
+          aria-controls="drawer"
+          aria-expanded="false"
+        >
+          <img
+            src="../assets/close.svg"
+            class="nav-button-image"
+            alt="ナビゲーションを閉じる"
+            width="38"
+            height="38"
+          />
+        </button>
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="#" class="nav-link"><span data-text="TOP"></span>TOP</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link"
+              ><span data-text="ABOUT"></span>ABOUT</a
+            >
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link"
+              ><span data-text="PRODUCTS"></span>PRODUCTS</a
+            >
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link"
+              ><span data-text="ACCESS"></span>ACCESS</a
+            >
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link"
+              ><span data-text="CONTACT"></span>CONTACT</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <main class="main">
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+      <p>メインコンテンツ</p>
+    </main>
+    <script src="script.js"></script>
+    <script src="gsap.js"></script>
+  </body>
 </html>
